Add a option in .env to toggle Sending a welcome message when the bot enters a server

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ USEGUILDNAME=true
 DATEINMESSAGE=true
 UTCTIMEINMESSAGE=true
 SENDWELCOMEMESSAGE=true
+SENDSERVERJOINMESSAGE=true
 RENEW_COMMANDS=true
 
 #This bot was made for my needs its not the greatest experience to use on your own keep this in mind!
