Add varibles for embeds

--- a/.env.example
+++ b/.env.example
@@ -47,5 +47,11 @@ UTCTIMEINMESSAGE=true
 SENDWELCOMEMESSAGE=true
 SENDSERVERJOINMESSAGE=true
 RENEW_COMMANDS=true
+EMBED_LINK=https://ethmangameon.github.io/alice-app/
+THUNMBNAIL_EMBED_LINK=https://ethmangameon.github.io/alice-app/images/icon.png
+EMBED_NAME=Alice
+EMBED_FOOTER_ICON=https://ethmangameon.github.io/alice-app/images/icon.png
+#Must be decimal https://www.rapidtables.com/convert/number/hex-to-decimal.html?x=E5262D
+EMBED_COLOR=15017517
 
 #This bot was made for my needs its not the greatest experience to use on your own keep this in mind!
