❌Added a blocking system for users and guilds

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ OLLAMA=http://localhost:11434
 WEBUIFORGE=http://localhost:7860
 
 # What Discord channels to enable it in (by ID)
-CHANNELS=1267332150563442779
+CHANNELS=1267332150563442779,977354886939299870
 
 # THIS IS ONLY THE DEFAULT USERS MAY RUN AN COMMAND TO SET A USER DEFINED SYSTEM MESSAGE
 # System message that the language model can understand
@@ -34,7 +34,6 @@ RANDOM_SERVER=false
 # add a message before the first prompt of the conversation
 INITIAL_PROMPT="I am a user with the default initial prompt."
 
-#MODIFICATIONS ETHMANGAMEON MADE v THIS POINT FORWARD IN ENV FILE
 IMAGEMODEL=0ssamaak0/xtuner-llava:llama3-8b-v1.1-f16
 USENICKNAME=true
 USEUSERNAME=true
@@ -53,5 +52,7 @@ EMBED_NAME=Alice
 EMBED_FOOTER_ICON=https://ethmangameon.github.io/alice-app/images/icon.png
 #Must be decimal https://www.rapidtables.com/convert/number/hex-to-decimal.html?x=E5262D
 EMBED_COLOR=15017517
+BLOCKED_GUILDS=977023694520086528,1207829667109802085
+BLOCKED_USERS=925477748007383061
 
 #This bot was made for my needs its not the greatest experience to use on your own keep this in mind!
