--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ Start(ONLY-OLLAMA).bat
 modelfile
 StartNPM.bat
 errors
+cache/blockedguilds
+/cache
+/cache
+cache/channels
+cache/blockedusers
+cache/blockedguilds
