Added blocked Phrases

--- a/.env.example
+++ b/.env.example
@@ -54,5 +54,6 @@ EMBED_FOOTER_ICON=https://ethmangameon.github.io/alice-app/images/icon.png
 EMBED_COLOR=15017517
 BLOCKED_GUILDS=977023694520086528,1207829667109802085
 BLOCKED_USERS=925477748007383061
+BLOCKED_PHRASES=rape
 
 #This bot was made for my needs its not the greatest experience to use on your own keep this in mind!
