--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"axios": "^1.6.3",
 		"discord.js": "^14.16.3",
 		"dotenv": "^16.3.1",
-		"meklog": "^1.0.2"
+		"meklog": "^1.0.2",
+		"mongodb": "6.9"
 	},
 	"type": "module",
 	"devDependencies": {
