Updated and fixed database errors

--- a/.env.example
+++ b/.env.example
@@ -55,5 +55,13 @@ EMBED_COLOR=15017517
 BLOCKED_GUILDS=977023694520086528,1207829667109802085
 BLOCKED_USERS=925477748007383061
 BLOCKED_PHRASES=rape
+MONGODB_DB=cache
+MONGO_CONTEXT_COLLECTION=context
+MONGO_BLOCKED_COLLECTION=blocked
+MONGO_CHANNELS_COLLECTION=channels
+MONGO_INITIAL_PROMPT_COLLECTION=initial-prompt
+MONGO_SYSTEM_MESSAGE_COLLECTION=system-message
+MONGO_WELCOME_MESSAGE_BOOLEAN_COLLECTION=welcome-message-boolean
+MONGO_WELCOME_MESSAGE_SYSTEM_MESSAGE_COLLECTION=welcome-message-system
 
 #This bot was made for my needs its not the greatest experience to use on your own keep this in mind!
