Update example env

--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,16 @@
 TOKEN=TOKENHERE
 
 # What language model to use, orca is one of the lower-end models that doesn't require as much computer power as llama2
-MODEL=llama3.2
+MODEL=llmama3.2
 
 # Ollama URL (if you want to use multiple, separate them by commas)
 OLLAMA=http://localhost:11434
 
 # Stable diffusion URL
-WEBUIFORGE=http://localhost:7860
+WEBUIFORGE=http://localhost:7861
 
-# What Discord channels to enable it in (by ID)
-CHANNELS=1267332150563442779,977354886939299870
+# What Discord channels to enable it in (by ID) (THIS IS THE DEFAULT VALUE IF THERE IS NO ./cache/channels)
+CHANNELS=1267332150563442779
 
 # THIS IS ONLY THE DEFAULT USERS MAY RUN AN COMMAND TO SET A USER DEFINED SYSTEM MESSAGE
 # System message that the language model can understand
@@ -24,9 +24,6 @@ USE_MODEL_SYSTEM=false
 # Require users to mention the bot to interact with it? (true/false)
 REQUIRES_MENTION=true
 
-# Whether to show a message at the start of a conversation
-SHOW_START_OF_CONVERSATION=false
-
 # Whether to use a random Ollama server or use the first available one
 RANDOM_SERVER=false
 
@@ -34,7 +31,12 @@ RANDOM_SERVER=false
 # add a message before the first prompt of the conversation
 INITIAL_PROMPT="I am a user with the default initial prompt."
 
+# Vision models https://ollama.com/blog/vision-models
 IMAGEMODEL=0ssamaak0/xtuner-llava:llama3-8b-v1.1-f16
+# Embedding model (Not used as of right now)
+EMBEDDINGMODEL=nomic-embed-text
+
+# Whether to include these in the prompts
 USENICKNAME=true
 USEUSERNAME=true
 USEUSERID=true
@@ -43,18 +45,31 @@ USECHANNELID=true
 USEGUILDNAME=true
 DATEINMESSAGE=true
 UTCTIMEINMESSAGE=true
+
+# Whether to send welcome messages at all
 SENDWELCOMEMESSAGE=true
+
+# Whether to send join message on guild join
 SENDSERVERJOINMESSAGE=true
+
+# Whether to generate new commands on startup (DONT TOUCH UNLESS YOU KNOW WHAT YOUR DOING)
 RENEW_COMMANDS=true
+
+# Command Embed settings
 EMBED_LINK=https://ethmangameon.github.io/alice-app/
 THUNMBNAIL_EMBED_LINK=https://ethmangameon.github.io/alice-app/images/icon.png
 EMBED_NAME=Alice
 EMBED_FOOTER_ICON=https://ethmangameon.github.io/alice-app/images/icon.png
-#Must be decimal https://www.rapidtables.com/convert/number/hex-to-decimal.html?x=E5262D
+# Embed color Must be decimal https://www.rapidtables.com/convert/number/hex-to-decimal.html?x=E5262D
 EMBED_COLOR=15017517
+
+# Automatic blocking
 BLOCKED_GUILDS=977023694520086528,1207829667109802085
 BLOCKED_USERS=925477748007383061
-BLOCKED_PHRASES=rape
+BLOCKED_PHRASES=testblock54
+
+# MongoDB settings
+MONGODB_URI=mongodb://localhost:27017
 MONGODB_DB=cache
 MONGO_CONTEXT_COLLECTION=context
 MONGO_BLOCKED_COLLECTION=blocked
@@ -63,5 +78,3 @@ MONGO_INITIAL_PROMPT_COLLECTION=initial-prompt
 MONGO_SYSTEM_MESSAGE_COLLECTION=system-message
 MONGO_WELCOME_MESSAGE_BOOLEAN_COLLECTION=welcome-message-boolean
 MONGO_WELCOME_MESSAGE_SYSTEM_MESSAGE_COLLECTION=welcome-message-system
-
-#This bot was made for my needs its not the greatest experience to use on your own keep this in mind!
