Fixed image description

--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,19 @@
 TOKEN=TOKENHERE
 
 # What language model to use, orca is one of the lower-end models that doesn't require as much computer power as llama2
-MODEL=llmama3.2
+MODEL=llama3.2
+# Vision models https://ollama.com/blog/vision-models
+IMAGEMODEL=llava
+# Embedding model (Not used as of right now)
+EMBEDDINGMODEL=nomic-embed-text
 
 # Ollama URL (if you want to use multiple, separate them by commas)
 OLLAMA=http://localhost:11434
 
 # Stable diffusion URL
-WEBUIFORGE=http://localhost:7861
+WEBUIFORGE=http://localhost:7860
 
-# What Discord channels to enable it in (by ID) (THIS IS THE DEFAULT VALUE IF THERE IS NO ./cache/channels)
+# What Discord channels to enable it in (by ID) (THIS IS THE DEFAULT VALUE IF THERE IS NO CHANNELS LISTED IN DB)
 CHANNELS=1267332150563442779
 
 # THIS IS ONLY THE DEFAULT USERS MAY RUN AN COMMAND TO SET A USER DEFINED SYSTEM MESSAGE
@@ -30,11 +34,6 @@ RANDOM_SERVER=false
 # THIS IS ONLY THE DEFAULT USERS MAY RUN AN COMMAND TO SET A USER DEFINED INITIAL PROMPT
 # add a message before the first prompt of the conversation
 INITIAL_PROMPT="I am a user with the default initial prompt."
-
-# Vision models https://ollama.com/blog/vision-models
-IMAGEMODEL=0ssamaak0/xtuner-llava:llama3-8b-v1.1-f16
-# Embedding model (Not used as of right now)
-EMBEDDINGMODEL=nomic-embed-text
 
 # Whether to include these in the prompts
 USENICKNAME=true
@@ -63,10 +62,10 @@ EMBED_FOOTER_ICON=https://ethmangameon.github.io/alice-app/images/icon.png
 # Embed color Must be decimal https://www.rapidtables.com/convert/number/hex-to-decimal.html?x=E5262D
 EMBED_COLOR=15017517
 
-# Automatic blocking
+# Automatic blocking (by ID) (THIS IS THE DEFAULT VALUE IF THERE IS NO ID's INSIDE THE DB)
 BLOCKED_GUILDS=977023694520086528,1207829667109802085
 BLOCKED_USERS=925477748007383061
-BLOCKED_PHRASES=testblock54
+BLOCKED_PHRASES=testblock54,yetanotherblockedphraseingen
 
 # MongoDB settings
 MONGODB_URI=mongodb://localhost:27017
