--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ TOKEN=TOKENHERE
 MODEL=llama3.2
 # Vision models https://ollama.com/blog/vision-models
 IMAGEMODEL=llava
+# DONT ENABLE UNLESS YOU UNDERSTAND WHAT THIS DOES
+# Do this if both the model and vision model are the same or have compatibility
+Allow_Cross_context=false
 # Embedding model (Not used as of right now)
 EMBEDDINGMODEL=nomic-embed-text
 
