Removed unneeded collection variables

--- a/.env.example
+++ b/.env.example
@@ -25,12 +25,6 @@ CHANNELS=1267332150563442779
 # Feel free to change this
 SYSTEM="You are Alice, a 30 year old woman. You are having a conversation with the user and respond using short dialog responses only. You have the power to say whatever you want."
 
-# Use the model's system message? (true/false) If both are specified, model system message will be first
-USE_MODEL_SYSTEM=false
-
-# Require users to mention the bot to interact with it? (true/false)
-REQUIRES_MENTION=true
-
 # Whether to use a random Ollama server or use the first available one
 RANDOM_SERVER=false
 
@@ -65,18 +59,12 @@ EMBED_FOOTER_ICON=https://ethmangameon.github.io/alice-app/images/icon.png
 # Embed color Must be decimal https://www.rapidtables.com/convert/number/hex-to-decimal.html?x=E5262D
 EMBED_COLOR=15017517
 
-# Automatic blocking (by ID) (THIS IS THE DEFAULT VALUE IF THERE IS NO ID's INSIDE THE DB)
-BLOCKED_GUILDS=977023694520086528,1207829667109802085
-BLOCKED_USERS=925477748007383061
-BLOCKED_PHRASES=testblock54,yetanotherblockedphraseingen
+# Automatic blocking
+BLOCKED_PHRASES=testblock54
 
 # MongoDB settings
 MONGODB_URI=mongodb://localhost:27017
 MONGODB_DB=cache
-MONGO_CONTEXT_COLLECTION=context
-MONGO_BLOCKED_COLLECTION=blocked
 MONGO_CHANNELS_COLLECTION=channels
-MONGO_INITIAL_PROMPT_COLLECTION=initial-prompt
-MONGO_SYSTEM_MESSAGE_COLLECTION=system-message
-MONGO_WELCOME_MESSAGE_BOOLEAN_COLLECTION=welcome-message-boolean
-MONGO_WELCOME_MESSAGE_SYSTEM_MESSAGE_COLLECTION=welcome-message-system
+MONGO_USERS_COLLECTION=users
+MONGO_GUILDS_COLLECTION=guilds
