--- a/.env.example
+++ b/.env.example
@@ -12,12 +12,12 @@ Allow_Cross_context=false
 EMBEDDINGMODEL=nomic-embed-text
 
 # Ollama URL (if you want to use multiple, separate them by commas)
-OLLAMA=http://localhost:11434
+OLLAMA=http://127.0.0.1:11434
 
 # Stable diffusion URL
-WEBUIFORGE=http://localhost:7860
+WEBUIFORGE=http://127.0.0.1:7860/
 
-# What Discord channels to enable it in (by ID) (THIS IS THE DEFAULT VALUE IF THERE IS NO CHANNELS LISTED IN DB)
+# What Discord channels to enable it in (by ID) (THIS IS THE DEFAULT VALUE IF THERE IS NO ./cache/channels)
 CHANNELS=1267332150563442779
 
 # THIS IS ONLY THE DEFAULT USERS MAY RUN AN COMMAND TO SET A USER DEFINED SYSTEM MESSAGE
@@ -52,12 +52,27 @@ SENDSERVERJOINMESSAGE=true
 RENEW_COMMANDS=true
 
 # Command Embed settings
-EMBED_LINK=https://ethmangameon.github.io/alice-app/
-THUNMBNAIL_EMBED_LINK=https://ethmangameon.github.io/alice-app/images/icon.png
+EMBED_LINK=https://ethmangameon.github.io/alice-page/
+THUNMBNAIL_EMBED_LINK=https://ethmangameon.github.io/alice-page/images/icon.png
 EMBED_NAME=Alice
-EMBED_FOOTER_ICON=https://ethmangameon.github.io/alice-app/images/icon.png
+EMBED_FOOTER_ICON=https://ethmangameon.github.io/alice-page/images/icon.png
 # Embed color Must be decimal https://www.rapidtables.com/convert/number/hex-to-decimal.html?x=E5262D
 EMBED_COLOR=15017517
+
+# Support server link
+SUPPORT_SERVER=https://discord.gg/RwZd3T8vde
+
+# Bot Owner user ID
+OWNER_ID=635136583078772754
+
+# Website for bot
+WEBSITE=https://ethmangameon.github.io/alice-page/
+
+# Github repo for bot
+REPO=https://github.com/Ethmangameon/alice-bot
+
+# Top.gg page
+TOPGG=https://top.gg/bot/1292925303211163738
 
 # Automatic blocking
 BLOCKED_PHRASES=testblock54
