Add logging collection to .env

--- a/.env.example
+++ b/.env.example
@@ -83,3 +83,4 @@ MONGODB_DB=cache
 MONGO_CHANNELS_COLLECTION=channels
 MONGO_USERS_COLLECTION=users
 MONGO_GUILDS_COLLECTION=guilds
+MONGODB_LOGGING_COLLECTION=log
