austin is very stinky

--- a/.env.example
+++ b/.env.example
@@ -75,9 +75,5 @@ TOPGG=https://top.gg/bot/1292925303211163738
 BLOCKED_PHRASES=testblock54
 
 # MongoDB settings
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI="mongodb://localhost:27017"
 MONGODB_DB=cache
-MONGO_CHANNELS_COLLECTION=channels
-MONGO_USERS_COLLECTION=users
-MONGO_GUILDS_COLLECTION=guilds
-MONGODB_LOGGING_COLLECTION=log
